# Embeddorium

./: .env.docker  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.dev  LICENSE.md  README.md  TODO.md  config copy.json  config.files.json  config.json  config.py  config.taxes.json  docker-compose.yml  hg_client.py  html_parser.py  link_extractor.py  llm_client.py  main.py  migrate.py  project-architecture.md  pyproject.toml  requirements.txt  text_splitter.py  vector_store.py
.agents/skills/ai-engineer/: SKILL.md
.agents/skills/commit/: SKILL.md
.agents/skills/python-engineer/: SKILL.md
.agents/skills/sre/: SKILL.md
.agents/skills/verify/: SKILL.md
.claude/agents/: frontend-engineer.md  pipeline-debugger.md  python-engineer.md
.claude/skills/ai-engineer/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/db-entity/: SKILL.md
.claude/skills/frontend-engineer/: SKILL.md
.claude/skills/python-engineer/: SKILL.md
.claude/skills/sre/: SKILL.md
.claude/skills/verify/: SKILL.md
.codex/: commit-context.md
.codex/agents/: frontend-engineer.toml  pipeline-debugger.toml  python-engineer.toml
backend/actors/chunk_document_actor/: __init__.py  handler.py  launcher.py
backend/agent/: config.py  generate.py  graph.py  input_processor.py  mcp_client.py
backend/mcp/: __init__.py  server.py
backend/outbox/: dispatcher.py
backend/plugins/: __init__.py  _fields.py  _strategy_discovery.py  structured_data.py
backend/runners/: add_file_source_job.py  add_web_source_job.py
backend/server/: README.md  chunkers_routes.py  datasets_routes.py  db_search.py  dependencies.py  main.py  matcher.py  models.py  pipeline_launch.py  pipeline_routes.py  pipeline_schemas.py  providers_routes.py  source_files_routes.py  source_root.py
backend/shared/: config.py  content_type.py  log_routing.py  logging_config.py  xml_utils.py
backend/tests/: test_log_routing.py  test_source_file_naming.py
docs/: architecture.md  changelog.md  concurrency.md  configuration.md  contributing.md  development.md  embeddings.md  faq.md  glossary.md  index.md  manual input comparison.md  math.md  navigation.md  plans.md  plugins.md  project-architecture.md  providers.md  quickstart.md  roadmap.md  search.md  troubleshooting.md  usage.md
docs/architecture/: data-lifecycle.md  domain-model.md  error-handling.md  evaluation-flow.md  frontend.md  ingestion-flow.md  overview.md  persistence.md  plugin-system.md  retrieval-flow.md  runtime-topology.md  security.md  system-context.md
docs/concepts/: datasets.md  ingestion-pipelines.md  plugins.md  providers.md  search-lab.md  search.md
docs/development/: coding-conventions.md  release-process.md  repository-structure.md  setup.md  testing.md
docs/getting-started/: first-dataset.md  first-ingestion.md  first-search.md  installation.md  quick-start.md
docs/internal/: README.md  feature-spec.md  manual-input-comparison.md
docs/pipeline/: README.md  actors.md  operations.md  queues.md
docs/product/: goals-and-non-goals.md  limitations.md  overview.md  product-model.md  use-cases.md
docs/tutorials/: first_mock_run.md  local_xml_import.md  ollama_embeddings.md  web_crawl.md
infra/docker/: Dockerfile.dev
infra/postgres/: Dockerfile  README.md
infra/qdrant/: README.md
infra/rabbitmq/: definitions.json
laws_agent/: config.py  log_routing.py  logging_config.py
laws_agent/actors/: embed_chunks_actor.py  link_processor_actor.py  url_helper.py  web_source_processor_actor.py
laws_agent/agent/: config.py  generate.py  graph.py  input_processor.py  mcp_client.py  state.py
laws_agent/clients/: hg_client.py  llm_client.py
laws_agent/mcp/: server.py
laws_agent/models/: __init__.py  crawl_target.py  discovered_link.py  document.py  document_chunk.py  pipeline_run.py
laws_agent/outbox/: dispatcher.py
laws_agent/parsers/: chunking_config.py  config_parser.py  html_parser.py  link_extractor.py  plain_text_parser.py  registry.py  tax_filter.py  text_splitter.py
laws_agent/pipeline/: run_config.py
laws_agent/prompts/: form_raw_info.md
laws_agent/runners/: add_file_source_job.py  add_web_source_job.py
laws_agent/storage/: sql_store.py  vector_store.py
pa/: SKILL.md
rabbitmq/: rabbitmq.conf
scripts/: clean-postgres.sh  clean-qdrant.sh  full-clean.sh  lib.sh  purge-queues.sh  rebuild-workers.sh  seed.sh  seed_files.sh
server/: .gitignore  README.md  db_search.py  embedder.py  main.py  models.py  pipeline_runs.py  vector_store_utils.py
tests/: test_log_routing.py
tests/actors/: pipeline_helpers.py  test_chunk_document_actor.py  test_crawl_frontier_manager_actor.py  test_embed_chunks_actor.py  test_embed_chunks_actor_provider_selection.py  test_fetch_file_source_actor.py  test_fetch_source_actor.py  test_filter_tax_acts_actor.py  test_link_processor_actor.py  test_parse_source_actor.py  test_schedule_discovered_links_actor.py  test_schedule_embeddings_actor.py  test_web_source_processor_actor.py
tests/clients/: test_failures.py  test_fetcher.py  test_mock_embed_client.py  test_ollama_embed_client.py
tests/outbox/: test_dispatcher.py
tests/parsers/: test_config_parser.py  test_tax_filter.py  test_xml_parser.py
tests/runners/: test_add_file_source_job.py  test_add_web_source_job.py
ui/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/src/: App.tsx  index.css
(+477 files in other folders)
