[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[project]
name = "embeddorium"
version = "0.1.0"
requires-python = ">=3.11"

# Shared by every actor
dependencies = [
  "pydantic>=2",
  "sqlalchemy>=2",
  "psycopg2-binary>=2.9",
  "dramatiq[rabbitmq,watch]>=1.17",
  "python-dotenv>=1",
]

[project.optional-dependencies]

# worker-web-source-processor
web = [
  "requests>=2",
  "trafilatura>=2",
  "langchain-text-splitters>=0.3",
]

# worker-embed-chunks (in docker-compose): lightweight path for the mock and
# remote-HTTP (ollama) embedding providers. No torch/sentence-transformers in
# the container image — langchain-ollama/ollama are HTTP clients (httpx-based).
embed = [
  "qdrant-client>=1",
  "langchain-ollama>=0.3",
  # FastEmbed: local ONNX embeddings via onnxruntime. Lightweight — no torch.
  "fastembed>=0.8",
  "httpx>=0.27",
]

# Real local embedding model (run by hand, not in docker-compose): the heavy ML
# stack on top of the lightweight `embed` deps.
embedding = [
  "qdrant-client>=1",
  "sentence-transformers>=3",
  "huggingface-hub>=0.20",
  "torch>=2",
]

# Embeddings tester API (server/): FastAPI service that embeds source/candidate
# texts and scores them against each other. Reuses backend's VectorStore +
# OllamaEmbedClient, so it needs the same vector/embed deps plus the web stack.
# The actor-config endpoint imports plugin modules to build their registries.
# Keep their import-time dependencies here: chunkers need
# langchain-text-splitters, and parse_source needs trafilatura through the HTML
# parser. Missing either dependency silently removes the affected strategies.
server = [
  "fastapi>=0.103",
  "uvicorn>=0.23",
  "qdrant-client>=1",
  "langchain-ollama>=0.3",
  "langchain-text-splitters>=0.3",
  "trafilatura>=2",
  "numpy>=1",
  # FastEmbed: local ONNX embeddings via onnxruntime. Lightweight — no torch.
  "fastembed>=0.8",
  "httpx>=0.27",
]

mcp = [
  "fastmcp",
]

agent = [
  "langgraph>=1.1",
  "langchain-mcp-adapters>=0.2",
  "langchain-openai>=0.3",
  "langchain-ollama>=0.3",
  "python-dotenv>=1",
]

dev = [
  "pytest>=8",
  "ruff>=0.8",
  "mypy>=1",
  "watchdog>=6",
]

[project.scripts]
agent-generate = "backend.agent.generate:main"
